[package]
name = "neural-net-using-nalgebra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.nalgebra]
version = "0.30.1"
default-features = false
features = ["rand", "alloc", "std"]

[dependencies]
rand = "0.8.5"
num = "0.4"
rand_distr = "0.4.3"